refactor(InventoryLoader): 리스트 속 요소를 수정 가능하게 코드 수정